2018-07-04  Szczepan Zalega <szczepan@nitrokey.com>

	* tool/upgrade_by_passwd.py: Catch exception, when no KDF data is
	found.
	Output 'second' for 1 second.

2018-05-10  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.2.10.

	* src/Makefile (build/gnuk.elf): New target.
	(build/gnuk-vidpid.elf): Remove.

	* chopstx: Update to 1.9.

2018-04-26  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb_ctrl.c (usb_device_reset): Don't stop the endpoints.

	* src/configure (MHZ, def_mhz): New.

2018-04-05  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.2.9.

	* tests: Add test cases for admin-less mode.

	* src/openpgp.c (cmd_change_password): Care admin-less mode.

2018-04-04  NIIBE Yutaka  <gniibe@fsij.org>

	* tests: Add more tests, key generation and KDF support.

	* src/openpgp.c (cmd_reset_user_password): Check length of
	new passphrase.

	* src/openpgp-do.c (proc_resetting_code): Support removal.
	(gpg_do_kdf_check): Fix for the case of resetting PW3.

	* tests/test_004_reset_pw3.py: New.

2018-04-03  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (rw_kdf): Clear all auth state.

	* tool/upgrade_by_passwd.py (main): Fix for byte compare.
	* tool/gnuk_remove_keys_libusb.py (main): Likewise.

2018-04-02  NIIBE Yutaka  <gniibe@fsij.org>

	* tool/gnuk_token.py (parse_kdf_data): New.
	* tool/kdf_calc.py: New.

	* tool/gnuk_remove_keys_libusb.py (main): Support KDF auth.
	* tool/upgrade_by_passwd.py (main): Likewise.

2018-03-30  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (rw_kdf): Support single-salt KDF.
	(gpg_do_get_initial_pw_setting): Likewise.
	(gpg_do_kdf_check): Likewise.

2018-03-22  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (rw_kdf): Do format validation earlier.

2018-03-13  NIIBE Yutaka  <gniibe@fsij.org>

	* src/flash.c [FLASH_UPGRADE_SUPPORT] (flash_terminate): Erase
	the page for upgrade public keys.

2018-02-12  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (rw_kdf): Return 0 when NULL.

2018-01-23  NIIBE Yutaka  <gniibe@fsij.org>